<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>dave_gazebo_world_plugins</name>
  <version>3.1.1</version>
  <description>The dave_gazebo_world_plugins package (Gazebo world plugin definitions)</description>
  <author email="gaurav.og.9920@gmail.com">Gaurav Kumar and woensug</author>
  <maintainer email="gaurav.og.9920@gmail.com">Gaurav Kumar and woensug</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>protobuf-dev</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>protobuf</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>protobuf</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>protobuf</exec_depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>