<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>dave_gz_world_plugins</name>
  <version>0.0.0</version>
  <description>The dave_gz_world_plugins package (gz world plugin definitions)</description>
  <author email="gaurav.og.9920@gmail.com">Gaurav Kumar and woensug</author>
  <maintainer email="gaurav.og.9920@gmail.com">Gaurav Kumar and woensug</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>protobuf-dev</buildtool_depend> -->
  <build_depend>protobuf</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>gz_ros</build_export_depend>
  <!-- <build_export_depend>protobuf</build_export_depend> -->
  <exec_depend>protobuf</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>gz_dev</depend>
  <depend>gz_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>dave_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>